--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ body {
     text-align: center;
     margin-top: 5%;
     font-weight: bold;
+    text-shadow: 2px 2px 10px rgba(214, 165, 255, 0.3);
 
     position: relative;
     -webkit-animation: slide .5s forwards;
@@ -117,8 +118,8 @@ body {
 
 .tile:hover {
     opacity: 1;
-    background-color: rgba(255, 236, 242, 0.5)
-    /* box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.6); */
+    /* background-color: rgba(255, 236, 242, 0.5); */
+    box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5);
 }
 
 /* PLAYERS */
@@ -138,12 +139,14 @@ body {
     animation-delay: .55s;
 }
 
+/* PLAYERS */
+
 .playerX {
-    color: #EE81A2;
+    color: #ff89ac;
 }    
 
 .playerO {
-    color: #80CDDB;
+    color: #57e6ff;
 }    
 
 /* CONTROLS */
