--- a/styles.css
+++ b/styles.css
@@ -4,32 +4,14 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 800;
 }
-
-/* .container {
-        background-image: linear-gradient(
-        0deg,
-        hsl(240, 100%, 20%) 12%,
-        hsl(289deg 100% 21%) 53%,
-        hsl(315deg 100% 27%) 61%,
-        hsl(329deg 100% 36%) 64%,
-        hsl(337deg 100% 43%) 66%,
-        hsl(357deg 91% 59%) 67%,
-        hsl(17deg 100% 59%) 70%,
-        hsl(34deg 100% 53%) 76%,
-        hsl(45, 100%, 50%) 85%,
-        hsl(55deg 100% 50%) 100%
-        );
-        height: 100vh;
-        padding-top: 1px;
-} */
-
-/* CONTAINER */
-/* ///////// */
 body {
     background-image: linear-gradient(to top, #5ee7df 0%, #b490ca 100%);
 }
 
 
+
+/* CONTAINER */
+/* ///////// */
 .container {
     /* background-color: #141415; */
     /* background: linear-gradient(to top, #134e5e, #71b280); */
@@ -196,7 +178,7 @@ body {
     opacity: 1;
 }
 
-.displayr {
+.displayResult {
     text-align: center;
     margin: 15px;
     background-color: rgb(254, 214, 227, .3);
@@ -223,7 +205,7 @@ body {
     animation-delay: .63s;
 }
 
-/* .displayr:hover {
+/* .displayResult:hover {
     background-color: rgb(254, 214, 227, .3);
     opacity: 1;
 } */
