--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ body {
     100% { bottom: 0; }
 }
 
-
+/* //////// */
 /* TILES */
 /* ///// */
 
@@ -104,7 +104,9 @@ body {
     box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5);
 }
 
+/* //////// */
 /* PLAYERS */
+/* //////// */
 
 .status-box {
     color: #D8E9DC;
@@ -121,7 +123,9 @@ body {
     animation-delay: .55s;
 }
 
+/* //////// */
 /* PLAYERS */
+/* //////// */
 
 .playerX {
     color: #ff89ac;
@@ -133,7 +137,9 @@ body {
     text-shadow: 2px 2px 6px rgba(186, 123, 202, 0.384);
 }    
 
+/* //////// */
 /* CONTROLS */
+/* //////// */
 
 .controls {
     display: flex;
@@ -151,6 +157,10 @@ body {
     bottom: -900px;
     animation-delay: .65s;
 }
+
+/* //////// */
+/* Reset Button */
+/* //////// */
 
 #reset {
     background-color: rgb(254, 214, 227, .3);
@@ -177,6 +187,10 @@ body {
     background-color: rgba(255, 236, 242, 0.5);
     opacity: 1;
 }
+
+/* //////// */
+/* Display REsults */
+/* //////// */
 
 .displayResult {
     text-align: center;
@@ -205,12 +219,9 @@ body {
     animation-delay: .63s;
 }
 
-/* .displayResult:hover {
-    background-color: rgb(254, 214, 227, .3);
-    opacity: 1;
-} */
-
+/* //////// */
 /* FOOTER */
+/* //////// */
 
 footer {
     background: linear-gradient(to bottom, rgb(94, 231, 223, .6) 0%, rgb(180, 144, 202, .6) 100%);
@@ -221,6 +232,11 @@ footer {
     margin-top: 25px;
     /* width: 100%; */
 }
+
+
+/* //////// */
+/* Query */
+/* //////// */
 
 @media all and (min-width: 600px) {
     .title {
