--- a/styles.css
+++ b/styles.css
@@ -100,8 +100,8 @@ body {
 
 .tile:hover {
     opacity: 1;
-    /* background-color: rgba(255, 236, 242, 0.5); */
-    box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 236, 242, 0.5);
+    /* box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5); */
 }
 
 /* //////// */
