--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@
     font-weight: 800;
 }
 body {
-    background-image: linear-gradient(to top, #5ee7df 0%, #b490ca 100%);
+    /* background-image: linear-gradient(to top, #5ee7df 0%, #b490ca 100%); */
+    background-color: #282226;
 }
 
 
@@ -15,12 +16,16 @@ body {
 .container {
     /* background-color: #141415; */
     /* background: linear-gradient(to top, #134e5e, #71b280); */
-    height: 100vh;
+    height: 80vh;
     /* padding-top: 1px; */
-    padding: 15px 30px;
+    padding: 20px 30px;
     margin-bottom: 50px;
-    width: 60vh;
+    width: 100%;
     margin: auto;
+    /* display: flex; */
+    /* flex-direction: column; */
+    margin-bottom: 15%;
+    margin-top: 75px;
 }
 
 /* TITLE */
@@ -85,7 +90,8 @@ body {
 
 .tile {
     /* border: 1px solid white; */
-    background-color: rgb(254, 215, 227, .3);
+    /* background-color: rgb(254, 215, 227, .3); */
+    background-color: rgba(255, 0, 76, 0.3);
     min-width: 100px;
     min-height: 100px;
     display: flex;
@@ -100,7 +106,8 @@ body {
 
 .tile:hover {
     opacity: 1;
-    background-color: rgba(255, 236, 242, 0.5);
+    background-color: rgba(255, 0, 76, 0.7);
+    /* background-color: rgba(255, 236, 242, 0.5); */
     /* box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5); */
 }
 
@@ -109,7 +116,8 @@ body {
 /* //////// */
 
 .status-box {
-    color: #D8E9DC;
+    /* color: #D8E9DC; */
+    color: rgba(255, 236, 242, 0.5);
     letter-spacing: 3px;
     font-size: 25px;
     text-align: center;
@@ -128,13 +136,13 @@ body {
 /* //////// */
 
 .playerX {
-    color: #ff89ac;
-    text-shadow: 2px 2px 6px rgba(0, 190, 196, 0.384);
+    color: #FF004C;
+    /* text-shadow: 2px 2px 6px #01ff3cc1; */
 }    
 
 .playerO {
-    color: #57e6ff;
-    text-shadow: 2px 2px 6px rgba(186, 123, 202, 0.384);
+    color: #08B2E3;
+    /* text-shadow: 2px 2px 6px rgba(186, 123, 202, 0.384); */
 }    
 
 /* //////// */
@@ -163,7 +171,8 @@ body {
 /* //////// */
 
 #reset {
-    background-color: rgb(254, 214, 227, .3);
+    background-color: rgba(255, 0, 76, 0.3);
+    /* background-color: rgb(254, 214, 227, .3); */
     color: rgb(255, 255, 255, .8);
     padding: 20px;
     border-radius: 15px;
@@ -184,7 +193,8 @@ body {
 
 #reset:hover {
     /* box-shadow: inset 0 0 10px #ffffff; */
-    background-color: rgba(255, 236, 242, 0.5);
+    background-color: rgba(255, 0, 76, 0.7);
+    /* background-color: rgba(255, 236, 242, 0.5); */
     opacity: 1;
 }
 
@@ -195,14 +205,16 @@ body {
 .displayResult {
     text-align: center;
     margin: 15px;
-    background-color: rgb(254, 214, 227, .3);
+    background-color: rgba(255, 0, 76, 0.3);
+    /* background-color: rgb(254, 214, 227, .3); */
     height: 50px;
     max-width: 320px;
     display: flex;
     justify-content: center;
     align-items: center;
     letter-spacing: 5px;
-    color: rgb(255, 255, 255, .8);
+    color: rgba(255, 236, 242);
+    /* color: rgb(255, 255, 255, .8); */
     letter-spacing: 5px;
     margin: 10px auto;
     border-radius: 15px;
@@ -224,13 +236,25 @@ body {
 /* //////// */
 
 footer {
-    background: linear-gradient(to bottom, rgb(94, 231, 223, .6) 0%, rgb(180, 144, 202, .6) 100%);
+    /* background: linear-gradient(to bottom, rgb(94, 231, 223, .6) 0%, rgb(180, 144, 202, .6) 100%); */
+    background-color: rgba(255, 0, 76, 0.3);
     color: rgb(255, 255, 255, .9);
     padding: 25px;
     height: 25px;
     text-align: center;
     margin-top: 25px;
+    font-size: 20px;
+    letter-spacing: 3px;
     /* width: 100%; */
+}
+
+footer a {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: #08B2E3;
 }
 
 
